# NCAR-Classic-Libraries-for-Geophysics

.github/workflows/: build-spherepack.yml
SpherePack/spherepack3.2/: .gitignore  Makefile.am  configure.ac
SpherePack/spherepack3.2/src/: advec.f  alf.f  ihgeod.f  math-common.f  shallow.f  shpe.f  shpg.f  vis-common.f  visequ.f  visgau.f  visgeo.f  vsurf.f
